Google Fusion Tablesの識別子(テーブルID)を設定ファイルで指定可能とする

--- a/plugins/lgdis/app/views/issues/_view_issues_form_details_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_form_details_bottom.html.erb
@@ -2,7 +2,7 @@
   <%= javascript_include_tag "http://www.google.com/jsapi" %>
   <%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?sensor=false&language=ja&v=3&client=#{API_KEY["google_map"]["client_id"]}" %>
   <%= javascript_tag do %>
-    var GOOGLE_FT_KEY = '<%= CF_ADDEESS["google_fusion_tables"]["id"] %>'; // FusionTablesのテーブルID
+    var GOOGLE_FT_KEY = '<%= CF_ADDRESS["google_fusion_tables"]["id"] %>'; // FusionTablesのテーブルID
   <% end %>
   <%= javascript_include_tag "gmap", :plugin => "lgdis" %>
 <% end %>
