バージョン表示時、不要文字が含まれていたので削除

--- a/plugins/lgdis/app/views/layouts/base.html.erb
+++ b/plugins/lgdis/app/views/layouts/base.html.erb
@@ -71,7 +71,7 @@
 <div id="footer">
   <div class="bgl"><div class="bgr">
       <div style="text-align: right">
-        Ver<%= VERSION["version"] %>
+        <%= VERSION["version"] %>
       </div>
     </div></div>
 </div>
