--- a/plugins/lgdis/app/views/account/_view_account_login_bottom.html.erb
+++ b/plugins/lgdis/app/views/account/_view_account_login_bottom.html.erb
@@ -1,4 +1,4 @@
-<% if Setting.plugin_lgdis.present? && (external_auth_enables = [Setting.plugin_lgdis[:enable_external_auth_google], Setting.plugin_lgdis[:enable_external_auth_twitter],Setting.plugin_lgdis[:enable_external_auth_facebook]].count("true")) > 0 %>
+<% if Setting.plugin_lgdis.present? && (external_auth_enables = [Setting.plugin_lgdis[:enable_external_auth_google], Setting.plugin_lgdis[:enable_external_auth_twitter],Setting.plugin_lgdis[:enable_external_auth_facebook],Setting.plugin_lgdis[:enable_external_auth_openam]].count("true")) > 0 %>
 <div id="login-form2">
   <table>
     <tr>
@@ -18,7 +18,9 @@
       <% if Setting.plugin_lgdis[:enable_external_auth_facebook] %>
       <td><%= link_to image_tag('/plugin_assets/lgdis/images/facebook-16x16.png', :alt => l('external_auth.sign_in_via', :kind => 'Facebook'), :size => '48x48'), prefix + '/auth/facebook' %></td>
       <% end %>
-      <!-- <td><%= link_to image_tag('/plugin_assets/lgdis/images/openam-16x16.png', :alt => l('external_auth.sign_in_via', :kind => 'OpenAM')), prefix + '/auth/openam' %></td> -->
+      <% if false %>
+      <td><%= link_to image_tag('/plugin_assets/lgdis/images/openam-16x16.png', :alt => l('external_auth.sign_in_via', :kind => 'OpenAM')), prefix + '/auth/openam' %></td>
+      <% end %>
     </tr>
   </table>
 </div>
