設定ファイルのdefault値の修正

--- a/plugins/lgdis/app/views/mailer/register.html.erb
+++ b/plugins/lgdis/app/views/mailer/register.html.erb
@@ -1,6 +1,6 @@
-<p>石巻市災害対応管理システムへの仮登録が完了しました。</p>
+<p><%= l(:lgdis_mail_body_done) %></p>
 
 <p><%= l(:lgdis_mail_body_register) %><br />
 <%= link_to h(@url), @url %></p>
 
-<p>石巻市総務部防災対策課</p>
+<p><%= l(:lgdis_mail_body_creater) %></p>
