--- a/plugins/lgdis/app/views/mailer/register.text.erb
+++ b/plugins/lgdis/app/views/mailer/register.text.erb
@@ -1,6 +1,6 @@
-石巻市災害対応管理システムへの仮登録が完了しました。
+<%= l(:lgdis_mail_body_done) %>
 
 <%= l(:lgdis_mail_body_register) %>
 <%= @url %>
 
-石巻市総務部防災対策課
+<%= l(:lgdis_mail_body_creater) %>
