--- a/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
@@ -130,7 +130,7 @@
           </td>
           <td><%= l(d_h.status, :scope => "delivery_status") %></td>
           <td>
-            <% if d_h.status == 'request' || d_h.status == 'failed' %>
+            <% if d_h.status == 'request' || d_h.status == 'failed' || d_h.status == 'reserve' %>
             <%= link_to "配信確認", {:controller => "deliver_issues",
                                      :action => "index",
                                      :project_id => @project,
