--- a/plugins/lgdis/app/views/issues/index.html.erb
+++ b/plugins/lgdis/app/views/issues/index.html.erb
@@ -43,8 +43,7 @@
     </fieldset>
     </div>
     <p class="buttons hide-when-print">
-
-    <%= link_to_function l(:button_apply), 'submit_query_form("query_form")', :class => 'icon icon-checked' %>
+    <%= link_to_function l(:button_search), 'submit_query_form("query_form")', :class => 'icon icon-checked' %>
     <%= link_to l(:button_clear), { :set_filter => 1, :project_id => @project }, :class => 'icon icon-reload'  %>
     <% if @query.new_record? && User.current.allowed_to?(:save_queries, @project, :global => true) %>
         <%= link_to_function l(:button_save),
