公共情報コモンズ不具合対応。コモンズの公開開始日時のデフォルト値の設定解除

--- a/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
@@ -120,7 +120,7 @@
         <% @delivery_histories.each do | d_h | %>
         <div class="table_border">
           <label class="label_border_updated"><%= tm_fmt_delivery(d_h.updated_at) %></label>
-          <label class="label_border_opened"><%= tm_fmt_delivery(d_h.opened_at) %></label>
+          <label class="label_border_opened"><%= tm_fmt_delivery(d_h.opened_at) %><br></label>
           <label class="label_border_delivery_place">
             <%= DST_LIST['delivery_place'][d_h.delivery_place_id]['name'] %>
           </label>
