--- a/app/views/watchers/_watchers.html.erb
+++ b/app/views/watchers/_watchers.html.erb
@@ -1,12 +1,26 @@
-<% if User.current.allowed_to?(:add_issue_watchers, @project) %>
+<%# if User.current.allowed_to?(:add_issue_watchers, @project) %>
+<!--
 <div class="contextual">
-<%= link_to l(:button_add),
+-->
+<%#= link_to l(:button_add),
       {:controller => 'watchers', :action => 'new', :object_type => watched.class.name.underscore, :object_id => watched},
       :remote => true,
       :method => 'get' %>
+<!--
 </div>
-<% end %>
+-->
+<%# end %>
+<!--
+<h3>
+-->
+	<%#= l(:label_issue_watchers) %>
+<!--
+	 (
+-->
+<%#= watched.watcher_users.size %>
+<!--
+)
+</h3>
+-->
+<%#= watchers_list(watched) %>
 
-<h3><%= l(:label_issue_watchers) %> (<%= watched.watcher_users.size %>)</h3>
-
-<%= watchers_list(watched) %>
